--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
             </div>
 
         </header>
-        <header class="header-display desktop">
+        <header class="header-display desktop dark">
             <div class="header-row flex-row justify-content-center py-3">
                 <div class="header-logo-display d-flex">
                     <a href="index.html">
@@ -152,7 +152,7 @@
                                 <a href="about.html" class="menu">About</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">Catalog</a>
+                                <a href="catalog.html" class="menu">Catalog</a>
                             </li>
                             <li>
                                 <a href="#" class="menu">News</a>
@@ -201,7 +201,7 @@
                                                 <a href="about.html">About</a>
                                             </li>
                                             <li>
-                                                <a href="#">Catalog</a>
+                                                <a href="catalog.html">Catalog</a>
                                             </li>
                                             <li>
                                                 <a href="#">News</a>
@@ -234,23 +234,17 @@
        
         <main id="main" class="main">
 
-            <style>
-                .header-display.desktop {
-                    background-color: #000;
-                }
-            </style>
-
-            <section style="background-color: #000;" class="py-5 first-section-about">
+            <section style="background-color: #000;" class="py-3">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3">
                             <img src="img/doodle-sabi.png" alt="" srcset=""
                                 class="doodle doodle-about reveal fade-left">
                             <div class="title-page-about title-section">
-                                <h1>ABOUT</h1>
+                                <h3>ABOUT</h3>
                             </div>
                         </div>
-                        <div class="col-lg-8">
+                        <div class="col-lg-9">
                             <div class="content-desc-about">
                                 <p>KOSMIK lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam What are
                                     you
@@ -269,12 +263,12 @@
                 </div>
             </section>
 
-            <section class="section-services">
+            <section class="py-5">
                 <div class="container-fluid reveal bottom">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="title-our-service title-section">
-                                <h1>OUR SERVICES</h1>
+                                <h3>OUR SERVICES</h3>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -310,14 +304,14 @@
             </div>
 
 
-            <section class="py-5 section-timeline">
+            <section class="py-5">
                 <div class="container-fluid reveal fade-bottom">
                     <div class="row" style="max-height: 97vh">
                         <div class="col-lg-3">
                             <img src="img/doodle-cimeng.png" alt="" srcset=""
                                 class="doodle doodle-timeline reveal fade-left">
                             <div class="title-section">
-                                <h1>TIMELINE</h1>
+                                <h3>TIMELINE</h3>
                             </div>
                             <div class="content-desc">
                                 <p>
@@ -359,12 +353,12 @@
                 </div>
             </div>
 
-            <section class="py-5 section-our-team">
+            <section class="py-5">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="title-our-team title-section reveal fade-left">
-                                <h1>Our Team</h1>
+                                <h3>Our Team</h3>
                             </div>
                         </div>
                     </div>
@@ -386,8 +380,8 @@
                                         <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt=""
                                             class="team-img-hover">
                                         <div class="desc-team">
-                                            <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
-                                            <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                            <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
                                         </div>
 
                                     </a>
@@ -400,8 +394,8 @@
                                         <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt=""
                                             class="team-img-hover">
                                         <div class="desc-team">
-                                            <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
-                                            <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                            <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
                                         </div>
 
                                     </a>
@@ -414,8 +408,8 @@
                                         <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt=""
                                             class="team-img-hover">
                                         <div class="desc-team">
-                                            <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
-                                            <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                            <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
                                         </div>
 
                                     </a>
@@ -428,8 +422,8 @@
                                         <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt=""
                                             class="team-img-hover">
                                         <div class="desc-team">
-                                            <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
-                                            <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                            <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
                                         </div>
 
                                     </a>
@@ -442,8 +436,8 @@
                                         <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt=""
                                             class="team-img-hover">
                                         <div class="desc-team">
-                                            <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
-                                            <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                            <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
                                         </div>
 
                                     </a>
@@ -470,11 +464,11 @@
                                                             alt="" class="team-img">
                                                     </div>
                                                     <div class="col-lg-6">
-                                                        <h3 style="margin-bottom: 0; font-weight: bold; color: #000">
-                                                            NAME</h3>
-                                                        <p style="margin: 0; font-weight: bold; color:#000">TITLE
-                                                        </p>
-                                                        <p style="font-weight: bold; color:#000">Founder of KOSMIK.
+                                                        <h5 style="margin-bottom: 0; font-weight: bold; color: #000">
+                                                            NAME</h5>
+                                                        <h5 style="margin: 0; font-weight: bold; color:#000">TITLE
+                                                        </h5>
+                                                        <p style="font-weight: bold; color:#000; font-size: 1vw">Founder of KOSMIK.
                                                             Co-founder of
                                                             Popcon Asia. Colorist for Marvel and DC.
                                                             One of the creators of <a href="#"
@@ -511,7 +505,7 @@
 
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="about.html">About</a></li>
-                            <li class="mb-0"><a href="#">Catalog</a></li>
+                            <li class="mb-0"><a href="catalog.html">Catalog</a></li>
                             <li class="mb-0"><a href="#">News</a></li>
                             <li class="mb-0"><a href="#">Contact</a></li>
                         </ul>
