--- a/catalog.html
+++ b/catalog.html
@@ -251,24 +251,24 @@
                                         <div class="container-fluid">
                                             <div class="row">
                                                 <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap">
+                                                    <div class="catalog-item-wrap reveal fade-left">
                                                         <span class="catalog-title">CODE<br>HELIX</span>
                                                         <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan Arfiandy</span>
                                                         <button class="btn btn-black" type="button">More Info <span
                                                                 class="glyphicon glyphicon-play"></span></button>
                                                     </div>
-                                                    <div class="catalog-img-wrap">
+                                                    <div class="catalog-img-wrap reveal fade-right">
                                                         <img src="img/catalog-2.png">
                                                     </div>
                                                 </div>
                                                 <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap">
+                                                    <div class="catalog-item-wrap reveal fade-left">
                                                         <span class="catalog-title">LOREM<br>IPSUM DOLOR</span>
                                                         <span class="catalog-author">by Lorem Ipsum</span>
                                                         <button class="btn btn-black" type="button">More Info <span
                                                                 class="glyphicon glyphicon-play"></span></button>
                                                     </div>
-                                                    <div class="catalog-img-wrap">
+                                                    <div class="catalog-img-wrap reveal fade-right">
                                                         <img src="img/catalog-1.png">
                                                     </div>
                                                 </div>
@@ -276,7 +276,7 @@
                                         </div>
                                     </div>
                                     <div id="pilot" class="tab-pane">
-                                        <div class="container-fluid">
+                                        <div class="container-fluid reveal fade-bottom">
                                             <div class="row">
                                                 <div class="col-lg-3">
                                                     <div class="pilot-post col-yellow">                                                        
@@ -365,7 +365,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">\
+                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">
                     </div>
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
 
