--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">\
+                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">
                     </div>
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
 
