add animation to news page

--- a/news.html
+++ b/news.html
@@ -311,9 +311,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <img src="img/doodle-sabi2.png" class="img-fluid doodle doodle-news">
+                            <img src="img/doodle-sabi2.png" class="img-fluid doodle doodle-news reveal fade-left">
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-10 reveal fade-right">
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-lg-8">
@@ -340,7 +340,7 @@
                             </div>
                             <div class="pb-3 container-fluid">
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 reveal fade-bottom">
                                         <img src="img/news-1.jpg" class="img-fluid">
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA </strong>18 Jan 2022 by Lorem Ipsum</p>
@@ -348,7 +348,7 @@
                                                 AMET, CONSECTETUER</h5>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 reveal fade-bottom">
                                         <img src="img/news-1.jpg" class="img-fluid">
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA </strong>18 Jan 2022 by Lorem Ipsum</p>
@@ -356,7 +356,7 @@
                                                 AMET, CONSECTETUER</h5>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 reveal fade-bottom">
                                         <img src="img/news-1.jpg" class="img-fluid">
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA </strong>18 Jan 2022 by Lorem Ipsum</p>
@@ -364,7 +364,7 @@
                                                 AMET, CONSECTETUER</h5>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 reveal fade-bottom">
                                         <img src="img/news-1.jpg" class="img-fluid">
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA </strong>18 Jan 2022 by Lorem Ipsum</p>
